# bambushain

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE.txt  Trunk.toml  docker-compose.build.yaml  docker-compose.yaml  frontend-pandas.toml  groves-frontend.toml  groves.amd64.dockerfile  groves.arm64.dockerfile  groves.dockerfile  pandas-frontend.toml  pandas.amd64.dockerfile  pandas.arm64.dockerfile  pandas.dockerfile
backend/: Cargo.toml  build.rs
backend/api/: Cargo.toml  build.rs
backend/api/src/: app.rs
backend/events/: Cargo.toml
backend/events/src/: app.rs
backend/mailer/: Cargo.toml
backend/mailer/listener/: Cargo.toml
backend/mailer/service/: Cargo.toml
backend/mailer/src/: lib.rs
backend/pandas/: Cargo.toml
backend/pandas/src/: lib.rs
backend/src/: lib.rs
backend/src/broadcaster/: calendar.rs  crew.rs  event.rs  kill.rs  mod.rs  mount.rs  savage_mount.rs  user.rs
backend/src/cookie/: auth.rs  mod.rs
backend/src/header/: mod.rs
backend/src/mailing/: mailer.rs  mod.rs
backend/src/middleware/: authenticate_user.rs  check_mod.rs  extract_character.rs  helpers.rs  identify_grove.rs  mod.rs
backend/src/notifier/: event.rs  mod.rs  notifier_state.rs
backend/src/path/: mod.rs
backend/src/response/: macros.rs
backend/src/routes/: authentication.rs  calendar.rs  character.rs  character_housing.rs  crafter.rs  custom_field.rs  event.rs  fighter.rs  free_company.rs  grove.rs  kill.rs  licenses.rs  mod.rs  mount.rs  my.rs  savage_mount.rs  support.rs  user.rs
backend/src/sse/: calendar.rs  crew.rs  event.rs  kill.rs  mod.rs  mount.rs  savage_mount.rs  user.rs
common/: Cargo.toml
common/backend/: Cargo.toml
common/backend/actix/: Cargo.toml
common/backend/database/: Cargo.toml
common/backend/dbal/: Cargo.toml
common/backend/logging/: Cargo.toml
common/backend/macros/: Cargo.toml
common/backend/mailing/: Cargo.toml
common/backend/message_queue/: Cargo.toml
common/backend/migration/: Cargo.toml
common/backend/notification/: Cargo.toml
common/backend/response/: Cargo.toml
common/backend/services/: Cargo.toml
common/backend/src/: lib.rs
common/backend/utils/: Cargo.toml
common/core/: Cargo.toml
common/core/entities/: Cargo.toml
common/core/error/: Cargo.toml
common/core/macros/: Cargo.toml
common/core/migration/: Cargo.toml
common/core/src/: lib.rs
common/frontend/: Cargo.toml
common/frontend/api/: Cargo.toml
common/frontend/src/: lib.rs
common/frontend/ui/: Cargo.toml
common/src/: lib.rs
database/: Cargo.toml
database/src/: crafter.rs  event.rs  fighter.rs  kill.rs  lib.rs  mount.rs  savage_mount.rs  token.rs  user.rs
dbal/: Cargo.toml
dbal/src/: authentication.rs  calendar.rs  character.rs  character_housing.rs  crafter.rs  custom_field.rs  event.rs  fighter.rs  free_company.rs  grove.rs  kill.rs  lib.rs  mount.rs  my.rs  savage_mount.rs  user.rs
entities/: Cargo.toml
entities/src/: authentication.rs  calendar.rs  character.rs  character_housing.rs  crafter.rs  custom_character_field.rs  custom_character_field_option.rs  custom_character_field_value.rs  dependency.rs  error.rs  event.rs  fighter.rs  free_company.rs  grove.rs  kill.rs  kill_to_user.rs  lib.rs  mount.rs  mount_to_user.rs  result.rs  savage_mount.rs  savage_mount_to_user.rs  status.rs  support.rs  token.rs  user.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/.fleet/: run.json
frontend/assets/: manifest.json
frontend/assets/css/: albert-sans.css  app.css  custom.css  urbanist.css
frontend/base/api/: Cargo.toml
frontend/base/error/: Cargo.toml
frontend/base/routing/: Cargo.toml
frontend/pandas/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
groves/: Cargo.toml  dump.rdb
groves/backend/: Cargo.toml
groves/frontend/: Cargo.toml  index.html
groves/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_schemas.rs  m20220101_000001_create_table_user.rs  m20230724_121011_create_table_user.rs  m20230724_121111_create_table_character.rs  m20230724_165124_create_table_token.rs  m20230724_165521_create_table_crafter.rs  m20230724_165656_create_table_fighter.rs  m20230724_165759_create_table_event.rs  m20230724_171039_create_table_kill.rs  m20230724_171437_create_table_kill_to_user.rs  m20230724_171715_create_table_mount.rs  m20230724_171801_create_table_mount_to_user.rs  m20230724_171834_create_table_savage_mount.rs  m20230724_171907_create_table_savage_mount_to_user.rs  m20230725_092805_create_table_status.rs  m20230804_191618_delete_old_tables.rs  m20230805_202224_user_add_discord_name.rs  m20230805_211912_create_table_calendar.rs  m20230807_004619_update_table_fighter.rs  m20230807_020100_update_table_crafter.rs  m20230826_221916_update_user_add_otp_column.rs  m20230829_194031_create_table_custom_character_field.rs  m20230829_194055_create_table_custom_character_field_option.rs  m20230829_194101_create_table_custom_character_field_value.rs  m20230917_003256_add_position_to_custom_field.rs  m20230923_090306_add_field_free_company.rs  m20231129_222204_add_field_to_set_totp_secret_encrypted.rs  m20231130_013324_increase_size_of_two_factor_code.rs  m20231212_004733_create_table_character_housing.rs  m20231218_111708_update_event_add_private_column.rs  m20231223_002207_update_housing_add_column_type.rs  m20231229_235511_create_table_grove.rs  m20231230_001307_update_table_user_add_column_grove_id.rs  m20231230_231220_update_table_character_change_unique.rs
pandas/: Cargo.toml  Trunk.toml
pandas/backend/: Cargo.toml  build.rs
pandas/events/: Cargo.toml
pandas/frontend/: Cargo.toml  index.html
pandas/mailer/: Cargo.toml
pandas/src/: lib.rs
rusty/: Cargo.toml  Trunk.toml  index.html
rusty/src/: main.rs
services/: Cargo.toml
services/src/: environment_service.rs  lib.rs
web/: Cargo.toml
yaml-database/: Cargo.toml
yaml-database/src/: crafter.rs  event.rs  fighter.rs  kill.rs  lib.rs  mount.rs  savage_mount.rs  token.rs  user.rs
yaml-to-postgres-migrator/: Cargo.toml
yaml-to-postgres-migrator/src/: main.rs
(+483 files in other folders)
