[package]
name = "bamboo"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-pandas = { path = "pandas", optional = true }
bamboo-groves = { path = "groves", optional = true }

actix-web = { workspace = true, optional = true }

[[bin]]
path = "src/bin/pandas-server.rs"
name = "pandas-server"
required-features = ["pandas-backend"]

[[bin]]
path = "src/bin/pandas-web.rs"
name = "pandas-web"
required-features = ["pandas-frontend"]

[[bin]]
path = "src/bin/groves-server.rs"
name = "groves-server"
required-features = ["groves-backend"]

[[bin]]
path = "src/bin/groves-web.rs"
name = "groves-web"
required-features = ["groves-frontend"]

[workspace]
members = [
    "common",
    "common/backend",
    "common/backend/database",
    "common/backend/dbal",
    "common/backend/macros",
    "common/backend/mailing",
    "common/backend/migration",
    "common/backend/response",
    "common/backend/services",
    "common/backend/utils",
    "common/core",
    "common/core/entities",
    "common/core/error",
    "common/frontend",
    "common/frontend/api",
    "common/frontend/ui",
    "groves",
    "groves/backend",
    "groves/frontend",
    "groves/frontend/base",
    "groves/frontend/base/routing",
    "groves/frontend/sections",
    "groves/frontend/sections/groves",
    "groves/frontend/sections/layout",
    "groves/frontend/sections/login",
    "groves/frontend/sections/users",
    "pandas",
    "pandas/backend",
    "pandas/frontend",
    "pandas/frontend/base",
    "pandas/frontend/base/error",
    "pandas/frontend/base/routing",
    "pandas/frontend/base/storage",
    "pandas/frontend/sections",
    "pandas/frontend/sections/authentication",
    "pandas/frontend/sections/bamboo",
    "pandas/frontend/sections/final-fantasy",
    "pandas/frontend/sections/layout",
    "pandas/frontend/sections/legal",
    "pandas/frontend/sections/licenses",
    "pandas/frontend/sections/mod-area",
    "pandas/frontend/sections/support"
]

[workspace.package]
version = "3.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
actix-web-lab = { version = "0.20.2", features = ["spa"] }
async-trait = "0.1.77"
base64 = "0.21.7"
bcrypt = "0.15.0"
bounce = { version = "0.9.0", features = ["query", "helmet"] }
bytes = "1.5.0"
bytestring = "1.3.1"
cargo_metadata = "0.18.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.33", features = ["serde", "unstable-locales"] }
color-art = "0.3.7"
console_log = { version = "1.0.0", features = ["color"] }
date-range = "0.3.0"
either = "1.9.0"
env_logger = "0.11.1"
futures = "0.3.30"
futures-util = "0.3.30"
gloo-dialogs = "0.2.0"
gloo-events = "0.2.0"
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
lettre = { version = "0.11.4", features = ["tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"], default-features = false }
log = "0.4.20"
openidconnect = "3.4.0"
parking_lot = "0.12.1"
pbkdf2 = "0.12.2"
quote = "1.0.35"
rand = "0.8.5"
rust-s3 = "0.33.0"
sea-orm = { version = "0.12.12", features = ["with-json", "runtime-actix-rustls", "sqlx-postgres"] }
sea-orm-migration = { version = "0.12.12", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
sentry = { version = "0.32.2", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "log"] }
sentry-actix = "0.32.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = "0.26.1"
sha2 = "0.10.8"
strum_macros = "0.26.1"
stylist = { version = "0.13.0", features = ["yew"] }
syn = "2.0.48"
tokio = "1.36.0"
totp-rs = { version = "5.5.1", features = ["qr", "gen_secret"] }
uuid = { version = "1.7.0", features = ["v4"] }
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
yew = { version = "0.21.0", features = ["csr", "hydration"] }
yew-autoprops = "0.4.1"
yew-cosmo = "1.0.10"
yew_icons = { version = "0.8.0", features = ["lucide"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"

[features]
default = []
pandas-frontend = ["dep:bamboo-pandas", "bamboo-pandas/frontend"]
pandas-backend = ["dep:bamboo-pandas", "bamboo-pandas/backend"]
groves-frontend = ["dep:bamboo-groves", "bamboo-groves/frontend"]
groves-backend = ["dep:bamboo-groves", "bamboo-groves/backend", "dep:actix-web"]

[profile.web-dev]
inherits = "dev"
# optimization for size (more aggressive)
opt-level = "z"

[profile.web-release]
inherits = "release"
# less code to include in binary
panic = "abort"
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = "z"
# link time optimization using whole-program analysis
lto = true
