[package]
name = "bamboo-backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-dbal = { path = "../dbal" }
bamboo-entities = { path = "../entities" }
bamboo-services = { path = "../services" }

actix-web = { workspace = true }
actix-web-lab = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
futures-util = { workspace = true }
lettre = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }
