[package]
name = "bamboo-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-dbal = { path = "../dbal" }
bamboo-entities = { path = "../entities" }
bamboo-error = { path = "../error" }
bamboo-services = { path = "../services" }
bamboo-sse = { path = "../sse" }

actix-web = { workspace = true }
actix-web-lab = { workspace = true, features = ["spa"] }
bytestring = { workspace = true }
chrono = { workspace = true }
date-range = { workspace = true }
lettre = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }

[build-dependencies]
bamboo-entities = { path = "../entities" }

cargo_metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }