[package]
name = "sheef_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheef_entities = { path = "../entities" }
serde_yaml = "0.9.22"
serde = { version = "1.0.171", features = ["derive"] }
bcrypt = "0.15.0"
log = "0.4.19"
sha2 = "0.10.7"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }