[package]
name = "sheef_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheef_entities = { path = "../entities" }
sheef_utils = { path = "../utils" }
serde_yaml = "0.9.22"
bcrypt = "0.15.0"
sha2 = "0.10.7"
base64 = "0.21.2"

log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }