[package]
name = "pandaparty-dbal"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandaparty-entities = { path = "../entities" }

uuid = { version = "1.4.0", features = ["v4"] }

bcrypt = { workspace = true }
date-range = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true }