[package]
name = "pandaparty-dbal"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandaparty-entities = { path = "../entities" }

bcrypt = { workspace = true }
date-range = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
totp-rs = { workspace = true }