[package]
name = "bamboo-dbal"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-entities = { path = "../entities" }
bamboo-error = { path = "../error" }

base64 = { workspace = true }
bcrypt = { workspace = true }
chacha20poly1305 = { workspace = true }
date-range = { workspace = true }
log = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
totp-rs = { workspace = true }