[package]
name = "bamboo-entities"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = { workspace = true }
chrono = { workspace = true }
color-art = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
totp-rs = { workspace = true, optional = true }

[features]
backend = ["dep:sea-orm", "dep:totp-rs"]
default = ["backend"]