[package]
name = "bamboo-entities"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = { workspace = true }
chrono = { workspace = true }
color-art = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sea-orm = { workspace = true }
actix-web = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }