[package]
name = "bamboo-frontend"
version.workspace = true
edition.workspace = true
license-file.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-entities = { path = "../entities", default-features = false }

async-trait = { workspace = true }
bounce = { workspace = true }
chrono = { workspace = true, features = ["unstable-locales"] }
date-range = { workspace = true }
either = { workspace = true }
gloo = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylist = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
yew-cosmo = { workspace = true }
yew_icons = { workspace = true }
yew-hooks = { workspace = true }
yew-router = { workspace = true }