[package]
name = "bamboo-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
members = [
    "base/api",
    "base/error",
    "base/routing",
    "base/storage",
    "sections/authentication",
    "sections/bamboo",
    "sections/final-fantasy",
    "sections/layout",
    "sections/legal",
    "sections/licenses",
    "sections/support"
]

[workspace.package]
version = "1.7.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-frontend-base-routing = { workspace = true }
bamboo-frontend-base-storage = { workspace = true }
bamboo-frontend-section-layout = { workspace = true }

log = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-cosmo = { workspace = true }
yew-router = { workspace = true }

[workspace.dependencies]
bamboo-entities = { path = "../entities" }
bamboo-error = { path = "../error" }
bamboo-frontend-base-api = { path = "base/api" }
bamboo-frontend-base-error = { path = "base/error" }
bamboo-frontend-base-routing = { path = "base/routing" }
bamboo-frontend-base-storage = { path = "base/storage" }
bamboo-frontend-section-authentication = { path = "sections/authentication" }
bamboo-frontend-section-bamboo = { path = "sections/bamboo" }
bamboo-frontend-section-final-fantasy = { path = "sections/final-fantasy" }
bamboo-frontend-section-layout = { path = "sections/layout" }
bamboo-frontend-section-legal = { path = "sections/legal" }
bamboo-frontend-section-licenses = { path = "sections/licenses" }
bamboo-frontend-section-support = { path = "sections/support" }

async-trait = "0.1.74"
bounce = { version = "0.9.0", features = ["query", "helmet"] }
chrono = { version = "0.4.31", features = ["serde", "unstable-locales"] }
date-range = "0.3.0"
either = "1.9.0"
futures = "0.3.29"
gloo-dialogs = "0.2.0"
gloo-events = "0.2.0"
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
stylist = { version = "0.13.0", features = ["yew"] }
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"
web-sys = "0.3.66"
yew = { version = "0.21.0", features = ["csr", "hydration"] }
yew-autoprops = "0.4.1"
yew-cosmo = "1.0.9"
yew_icons = { version = "0.8.0", features = ["lucide"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"

[profile.dev]
# optimization for size ( more aggressive )
opt-level = "z"

[profile.release]
# less code to include into binary
panic = "abort"
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = "z"
# link time optimization using using whole-program analysis
lto = true
strip = "symbols"
