[package]
name = "bamboo-groves"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-groves-backend = { path = "backend", optional = true }
bamboo-groves-frontend = { path = "frontend", optional = true }

[features]
default = []
backend = ["dep:bamboo-groves-backend"]
frontend = ["dep:bamboo-groves-frontend"]
