[package]
name = "bamboo-pandas"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-pandas-backend = { path = "backend", optional = true }
bamboo-pandas-frontend = { path = "frontend", optional = true }

[features]
default = []
frontend = ["dep:bamboo-pandas-frontend"]
backend = ["dep:bamboo-pandas-backend"]
