[package]
name = "bamboo-pandas"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-pandas-backend = { path = "backend", optional = true }
bamboo-pandas-frontend = { path = "frontend", optional = true }
bamboo-pandas-events = { path = "events", optional = true }
bamboo-pandas-mailer = { path = "mailer", optional = true }

[features]
default = []
backend = ["dep:bamboo-pandas-backend"]
frontend = ["dep:bamboo-pandas-frontend"]
events = ["dep:bamboo-pandas-events"]
mailer = ["dep:bamboo-pandas-mailer"]
