[package]
name = "rusty_sheef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheef_entities = { path = "../entities" }
yew = { version = "0.20.0", features = ["csr", "hydration"] }
yew-router = "0.17.0"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
async-trait = "0.1.71"
gloo = { version = "0.8.1", default-features = false, features = ["storage", "net"] }
bounce = { version = "0.7.0", features = ["query", "helmet"] }
getrandom = { version = "0.2.10", features = ["js"] }
num-traits = "0.2.15"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
chrono = { version = "0.4.26", features = ["serde"] }