[package]
name = "pandaparty-services"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandaparty-entities = { path = "../entities" }

sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["fs"] }
