[package]
name = "sheef_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheef_database = { path = "../database" }
sheef_entities = { path = "../entities" }
serde = "1.0.171"
serde_json = "1.0.100"
actix-web = "4.3.1"
log = "0.4.19"
futures-util = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }