[package]
name = "sheef-yaml-to-postgres-migrator"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheef-dbal = { path = "../dbal" }
sheef-entities = { path = "../entities" }
sheef-migration = { path = "../migration" }
sheef-yaml-database = { path = "../yaml-database" }
sheef-yaml-entities = { path = "../yaml-entities" }

tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
stderrlog = "0.5.4"

sea-orm = { workspace = true }
log = { workspace = true }