[package]
name = "bamboo-common-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bamboo-common-backend-dbal = { path = "dbal" }
bamboo-common-backend-services = { path = "services" }
bamboo-common-core = { path = "../core" }

